[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-security-env"
version = "1.0.0"
description = "Automated Code Security Review OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "openai",
    "requests",
    "openenv-core>=0.2.0" 
]

# This tells the auto-grader exactly where your server lives!
[project.scripts]
server = "server.app:app"
[project.scripts]
server = "server.app:main"